--- a/style/style.css
+++ b/style/style.css
@@ -19,7 +19,9 @@
 }
 .header_flex,
 .footer_flex,
-.about {
+.subscribe,
+.about,
+.plan_flex {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -108,3 +110,113 @@
   justify-content: space-between;
   align-items: center;
 } */
+.subscribe {
+  margin-bottom: 85px;
+}
+.subscribe_title {
+  font-weight: bold;
+  font-size: 50px;
+  line-height: 57px;
+  letter-spacing: -1.56316px;
+  color: #19191b;
+  margin-bottom: 38px;
+}
+.input {
+  width: 302px;
+  height: 60px;
+  border-radius: 10px;
+  border: 1px solid #7087ff;
+  padding-left: 14px;
+  box-sizing: border-box;
+  margin-right: 39px;
+}
+.input::placeholder,
+.input {
+  font-weight: bold;
+  font-size: 17px;
+  line-height: 22px;
+  letter-spacing: -0.531474px;
+  color: #000000;
+}
+.input:focus {
+  outline: none;
+}
+.plan {
+  margin-bottom: 132px;
+}
+.plan_title {
+  font-weight: bold;
+  font-size: 60px;
+  line-height: 70px;
+  letter-spacing: -1.87579px;
+  color: #19191b;
+  max-width: 504px;
+  margin-bottom: 110px;
+}
+.item {
+  width: 330px;
+  background: #f8f8f8;
+  border-radius: 10px;
+  text-align: center;
+  padding: 34px 0 27px;
+}
+
+.item:hover {
+  transition: 500ms;
+  background: #ff7143;
+  box-shadow: 0px 32px 34px rgba(255, 112, 59, 0.317827);
+  border-radius: 10px;
+}
+
+.item:hover .item_text,
+.item:hover .item_title,
+.item:hover .item_li {
+  color: white;
+  transition: 500ms;
+}
+.item_text {
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 28px;
+  text-align: center;
+  letter-spacing: -0.562737px;
+  color: #696871;
+}
+.item_title {
+  font-weight: bold;
+  font-size: 60px;
+  line-height: 56px;
+  text-align: center;
+  letter-spacing: -1.03448px;
+  color: #1d293f;
+}
+
+.item_title span {
+  font-size: 28px;
+}
+
+.item_li {
+  font-weight: normal;
+  font-size: 17px;
+  line-height: 50px;
+  text-align: center;
+  letter-spacing: -0.531474px;
+  color: #696871;
+}
+.button_item {
+  font-weight: bold;
+  font-size: 17px;
+  line-height: 22px;
+  text-align: center;
+  letter-spacing: -0.531474px;
+  color: #5454d4;
+  margin: 22px 0 28px;
+  width: 285px;
+  background: white;
+}
+
+.item:hover .button_item {
+  background: #9f3919;
+  color: white;
+  transition: 500ms;
+}
